[build-system]
requires = ["setuptools >= 50.3.2"]
build-backend = "setuptools.build_meta"

# black is the tool to format the source code
[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
# isort orders and lints imports
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
order_by_type = false
force_alphabetical_sort_within_sections = true
force_sort_within_sections = true
combine_as_imports = true
include_trailing_comma = true
color_output = true
lines_after_imports = 2
honor_noqa = true

[tool.pylint.master]
ignore = 'tests'
load-plugins =' pylint.extensions.docparams,pylint.extensions.docstyle'

[tool.pylint.messages_control]
# we should disbale more pylint warnings since it can get quite anoying
disable = 'too-few-public-methods, missing-module-docstring'

[tool.pylint.docstyle]
default-docstring-type = "numpy"